--- a/addons/web_editor/views/editor.xml
+++ b/addons/web_editor/views/editor.xml
@@ -52,6 +52,7 @@
     <script type="text/javascript" src="/web_editor/static/src/js/wysiwyg/plugin/link.js"/>
     <script type="text/javascript" src="/web_editor/static/src/js/wysiwyg/plugin/font.js"/>
     <script type="text/javascript" src="/web_editor/static/src/js/wysiwyg/plugin/font_buttons.js"/>
+    <script type="text/javascript" src="/web_editor/static/src/js/wysiwyg/plugin/keyboard.js"/>
     <script type="text/javascript" src="/web_editor/static/src/js/wysiwyg/plugin/unbreakable.js"/>
     <script type="text/javascript" src="/web_editor/static/src/js/wysiwyg/plugin/transform.js"/>
 </template>
@@ -123,6 +124,9 @@
     <xpath expr="." position="inside">
         <script type="text/javascript" src="/web_editor/static/tests/test_utils.js"/>
         <script type="text/javascript" src="/web_editor/static/tests/field_html_tests.js"/>
+        <script type="text/javascript" src="/web_editor/static/tests/wysiwyg_tests.js"/>
+        <script type="text/javascript" src="/web_editor/static/tests/wysiwyg_keyboard_tests.js"/>
+        <script type="text/javascript" src="/web_editor/static/tests/wysiwyg_snippets_tests.js"/>
     </xpath>
 </template>
 
