history => convert in plugin and add clear

--- a/addons/web_editor/views/editor.xml
+++ b/addons/web_editor/views/editor.xml
@@ -45,6 +45,7 @@
     <script type="text/javascript" src="/web_editor/static/src/js/wysiwyg/plugin/helper.js"/>
 
     <script type="text/javascript" src="/web_editor/static/src/js/wysiwyg/plugin/toolbar.js"/>
+    <script type="text/javascript" src="/web_editor/static/src/js/wysiwyg/plugin/history.js"/>
     <script type="text/javascript" src="/web_editor/static/src/js/wysiwyg/plugin/table.js"/>
     <script type="text/javascript" src="/web_editor/static/src/js/wysiwyg/plugin/text.js"/>
     <script type="text/javascript" src="/web_editor/static/src/js/wysiwyg/plugin/editor.js"/>
