[CHG] mrp: convert structure report to qweb view — to an extent
As with the project overview all the stuff which probably goes in the
control panel is missing:

* no printing buttons (though none of the printing stuff was touched so
  it should all be working same as ever, in fact the printing action
  from the list view works fine)
* no "quantity" selector, not really sure how to implement
* no section selector, should probably be a filter thing which sets
  context keys, which the qweb template then uses to decide what is or
  is not displayed

--- a/addons/mrp/static/src/scss/mrp_bom_report.scss
+++ b/addons/mrp/static/src/scss/mrp_bom_report.scss
@@ -13,7 +13,7 @@
             border-width: 1px;
             border-top-style: solid;
             border-bottom-style: groove;
-            .o_mrp_bom_unfoldable, .o_mrp_bom_foldable {
+            [type="toggle"] {
                 cursor: pointer;
             }
         }
@@ -28,7 +28,7 @@
                 .o_mrp_bom_no_fold {
                     margin-left: 18px;
                 }
-                .o_mrp_bom_unfoldable, .o_mrp_bom_foldable {
+                [type="toggle"] {
                     margin-left: -2px;
                 }
             }
