--- a/addons/mrp/report/mrp_report_bom_structure.xml
+++ b/addons/mrp/report/mrp_report_bom_structure.xml
@@ -7,7 +7,7 @@
                     <div class="col-lg-12">
                         <h1>BoM Structure &amp; Cost</h1>
                         <h3>
-                            <a href="#" t-if="data['report_type'] == 'html'" t-att-data-res-id="data['product'].id" t-att-data-model="data['product']._name" class="o_mrp_bom_action">
+                            <a tabindex="-1" type="action" t-if="data['report_type'] == 'html'" t-att-data-res-id="data['product'].id" t-att-data-model="data['product']._name">
                                 <t t-esc="data['bom_prod_name']"/>
                             </a>
                             <t t-else="" t-esc="data['bom_prod_name']"/>
@@ -34,10 +34,10 @@
                                 <tbody>
                                     <tr>
                                         <td>
-                                            <span><a href="#" t-if="data['report_type'] == 'html'" t-att-data-res-id="data['product'].id" t-att-data-model="'product.product'" class="o_mrp_bom_action"><t t-esc="data['bom_prod_name']"/></a><t t-else="" t-esc="data['bom_prod_name']"/></span>
+                                            <span><a tabindex="-1" type="action" t-if="data['report_type'] == 'html'" t-att-data-res-id="data['product'].id" data-model="product.product"><t t-esc="data['bom_prod_name']"/></a><t t-else="" t-esc="data['bom_prod_name']"/></span>
                                         </td>
                                         <td>
-                                            <span><a href="#" t-if="data['report_type'] == 'html'" t-att-data-res-id="data['bom'].id" t-att-data-model="'mrp.bom'" class="o_mrp_bom_action"><t t-esc="data['code']"/></a><t t-else="" t-esc="data['code']"/></span>
+                                            <span><a tabindex="-1" type="action" t-if="data['report_type'] == 'html'" t-att-data-res-id="data['bom'].id" data-model="mrp.bom"><t t-esc="data['code']"/></a><t t-else="" t-esc="data['code']"/></span>
                                         </td>
                                         <td class="text-right"><span><t t-esc="data['bom_qty']" t-options='{"widget": "float", "decimal_precision": "Product Unit of Measure"}'/></span></td>
                                         <td groups="uom.group_uom"><span><t t-esc="data['bom'].product_uom_id.name"/></span></td>
@@ -50,7 +50,11 @@
                                         <td t-if="data['report_type'] == 'html'">
                                             <span>
                                                 <t t-if="data['attachments']">
-                                                    <a href="#" role="button" t-att-data-res-id="data['attachments'].ids" t-att-data-model="'mrp.document'" class="o_mrp_show_attachment_action fa fa-fw o_button_icon fa-files-o"/>
+                                                    <a role="button" tabindex="-1" type="action" title="Attachments"
+                                                       data-model="mrp.document"
+                                                       data-views='[[false, "kanban"], [false, "list"], [false, "form"]]'
+                                                       t-att-data-domain="json.dumps([['id', 'in', data['attachments'].ids]])"
+                                                       class="fa fa-fw o_button_icon fa-files-o"/>
                                                 </t>
                                             </span>
                                         </td>
@@ -82,19 +86,30 @@
             </t>
         </div>
     </template>
+    <record id="report_mrp_bom" model="ir.ui.view">
+        <field name="model">report.mrp.report_bom_structure</field>
+    </record>
 
     <template id="report_mrp_bom_line">
         <t t-set="currency" t-value="data['currency']"/>
         <t t-foreach="data['components']" t-as="l">
-            <t t-set="space_td" t-value="'margin-left: '+ str(l['level'] * 20) + 'px;'"/>
-            <tr class="o_mrp_bom_report_line" t-att-data-id="l['child_bom']" t-att-parent_id="l['parent_id']" t-att-data-line="l['line_id']" t-att-data-product_id="l['prod_id']" t-att-data-qty="l['prod_qty']" t-att-data-level="l['level']">
+            <tr class="o_mrp_bom_report_line"
+                data-model="report.mrp.report_bom_structure"
+                data-method="get_bom"
+                t-att-data-args="json.dumps({
+                    'bom_id': l['child_bom'],
+                    'product_id': l['prod_id'],
+                    'line_id': l['line_id'],
+                    'line_qty': l['prod_qty'],
+                    'level': l['level'] + 1
+                })">
                 <td>
-                    <span t-att-style="space_td"/>
+                    <span t-attf-style="margin-left: {{ l['level'] * 20 }}px;"/>
                     <t t-if="l['child_bom']">
-                        <span t-att-data-function="'get_bom'" class="o_mrp_bom_unfoldable fa fa-fw fa-caret-right" role="img" aria-label="Unfold" title="Unfold"/>
+                        <span type="toggle" class="fa fa-fw fa-caret-right" role="img" aria-label="Unfold" title="Unfold"/>
                     </t>
                     <span t-att-class="None if l['child_bom'] else 'o_mrp_bom_no_fold'">
-                        <a href="#" t-att-data-res-id="l['prod_id']" t-att-data-model="'product.product'" class="o_mrp_bom_action"><t t-esc="l['prod_name']"/></a>
+                        <a tabindex="-1" type="action" t-att-data-res-id="l['prod_id']" data-model="product.product"><t t-esc="l['prod_name']"/></a>
                     </span>
                     <t t-if="l['phantom_bom']">
                         <span class="fa fa-dropbox" title="This is a BoM of type Kit!" role="img" aria-label="This is a BoM of type Kit!"/>
@@ -102,7 +117,7 @@
                 </td>
                 <td>
                     <span>
-                        <a href="#" t-att-data-res-id="l['child_bom']" t-att-data-model="'mrp.bom'" class="o_mrp_bom_action"><t t-esc="l['code']"/></a>
+                        <a tabindex="-1" type="action" t-att-data-res-id="l['child_bom']" data-model="mrp.bom"><t t-esc="l['code']"/></a>
                   </span>
                 </td>
                 <td class="text-right"><span><t t-esc="l['prod_qty']" t-options='{"widget": "float", "decimal_precision": "Product Unit of Measure"}'/></span></td>
@@ -116,18 +131,29 @@
                 <td>
                     <span>
                         <t t-if="l['attachments']">
-                            <a href="#" role="button" t-att-data-res-id="l['attachments'].ids" t-att-data-model="'mrp.document'" class="o_mrp_show_attachment_action fa fa-fw o_button_icon fa-files-o"/>
+                            <a role="button" tabindex="-1" type="action" title="Attachments"
+                               data-model="mrp.document"
+                               data-views='[[false, "kanban"], [false, "list"], [false, "form"]]'
+                               t-att-data-domain="json.dumps([['id', 'in', l['attachments'].ids]])"
+                               class="fa fa-fw o_button_icon fa-files-o"/>
                         </t>
                     </span>
                 </td>
             </tr>
         </t>
         <t t-if="data['operations']">
-            <t t-set="space_td" t-value="'margin-left: '+ str(data['level'] * 20) + 'px;'"/>
-            <tr class="o_mrp_bom_report_line o_mrp_bom_cost" t-att-data-id="'operation-' + str(data['bom'].id)" t-att-data-bom-id="data['bom'].id" t-att-parent_id="data['bom'].id" t-att-data-qty="data['bom_qty']" t-att-data-level="data['level']">
+            <tr class="o_mrp_bom_report_line o_mrp_bom_cost"
+                t-attf-data-id="operation-{{ data['bom'].id }}"
+                data-model="report.mrp.report_bom_structure"
+                data-method="get_operations"
+                t-att-data-args="json.dumps({
+                    'bom_id': data['bom'].id,
+                    'qty': data['bom_qty'],
+                    'level': data['level'] + 1,
+                })">
                 <td>
-                    <span t-att-style="space_td"/>
-                    <span class="o_mrp_bom_unfoldable fa fa-fw fa-caret-right" t-att-data-function="'get_operations'" role="img" aria-label="Unfold" title="Unfold"/>
+                    <span t-attf-style="margin-left: {{ data['level'] * 20 }}px;"/>
+                    <span type="toggle" class="fa fa-fw fa-caret-right" data-function="get_operations" role="img" aria-label="Unfold" title="Unfold"/>
                     Operations
                 </td>
                 <td/>
@@ -148,11 +174,10 @@
     <template id="report_mrp_operation_line">
       <t t-set="currency" t-value="data['currency']"/>
       <t t-foreach="data['operations']" t-as="op">
-          <t t-set="space_td" t-value="'margin-left: '+ str(op['level'] * 20) + 'px;'"/>
-          <tr class="o_mrp_bom_report_line o_mrp_bom_cost" t-att-parent_id="'operation-' + str(data['bom_id'])">
+          <tr class="o_mrp_bom_report_line o_mrp_bom_cost" t-attf-parent_id="'operation-{{ data['bom_id'] }}">
               <td>
-                  <span t-att-style="space_td"/>
-                  <a href="#" t-att-data-res-id="op['operation'].id" t-att-data-model="'mrp.routing.workcenter'" class="o_mrp_bom_action"><t t-esc="op['name']"/></a>
+                  <span t-attf-style="margin-left: {{ op['level'] * 20 }}px;"/>
+                  <a tabindex="-1" type="action" t-att-data-res-id="op['operation'].id" data-model="mrp.routing.workcenter"><t t-esc="op['name']"/></a>
               </td>
               <td/>
               <td class="text-right">
@@ -177,11 +202,11 @@
     <template id="report_mrp_bom_pdf_line">
       <t t-set="currency" t-value="data['currency']"/>
       <t t-foreach="data['lines']" t-as="l">
-          <t t-set="space_td" t-value="'margin-left: '+ str(l['level'] * 20) + 'px;'"/>
           <tr t-if="data['report_structure'] != 'bom_structure' or l['type'] != 'operation'">
               <td>
-                  <span t-att-style="space_td"/>
-                  <span><t t-esc="l['name']"/></span>
+                  <span t-attf-style="margin-left: {{ l['level'] * 20 }}px;">
+                      <t t-esc="l['name']"/>
+                  </span>
               </td>
               <td>
                   <span t-if="l.get('code')" t-esc="l['code']" />
