--- a/addons/stock/static/src/scss/stock_traceability_report.scss
+++ b/addons/stock/static/src/scss/stock_traceability_report.scss
@@ -69,6 +69,9 @@
     }
     .o_stock_reports_caret_icon {
         margin-left: -3px;
+        &+.o_stock_reports_stream {
+            display: none;
+        }
     }
     th {
         border-bottom: thin groove;
