--- a/addons/stock/views/report_stock_traceability.xml
+++ b/addons/stock/views/report_stock_traceability.xml
@@ -3,46 +3,58 @@
 
     <template id="report_mrp_line">
         <t t-foreach="lines" t-as="a">
-            <t t-set="trclass" t-value="'o_stock_reports_default_style'"/>
-            <t t-if="a.get('model') == 'stock.move.line'"><t t-set="trclass" t-value="'o_stock_reports_level0'"/></t>
-            <t t-set="domainClass" t-value="'o_stock_reports_domain_line'"/>
-            <t t-if="a['unfoldable'] == false">
-                <t t-set="domainClass" t-value="'o_stock_reports_domain_line_1'"/>
-            </t>
-            <t t-set="column" t-value="0" />
-            <tr t-att-data-unfold="a['unfoldable']" t-att-data-parent_id="a['parent_id']" t-att-data-id="a['id']" t-att-data-model_id="a['model_id']" t-att-data-model="a['model']" t-att-data-lot_name="a['lot_name']" t-att-data-lot_id="a['lot_id']" t-att-class="trclass">
-                <t t-set="tdclass" t-value="''" />
-                <t t-set="spanclass" t-value="''" />
-                <t t-set="span_color" t-value="'color: #666666;'"/>
-                <t t-if="a['usage'] == 'in'"><t t-set="span_color" t-value="'color: #3c763d;'"/></t>
-                <t t-if="a['usage'] == 'out'"><t t-set="span_color" t-value="'color: #a94442;'"/></t>
-                <t t-if="a.get('unfoldable')"><t t-set="tdclass" t-value="'o_stock_reports_unfoldable'" /></t>
-                <t t-if="not a.get('unfoldable')"><t t-set="spanclass" t-value="'o_stock_reports_nofoldable'" /></t>
-                <t t-set="column" t-value="0" />
+            <t t-set="trclass" t-value="'o_stock_reports_level0' if a.get('model') == 'stock.move.line' else 'o_stock_reports_default_style'"/>
+            <tr t-att-class="trclass"
+                data-model="stock.traceability.report"
+                data-method="get_lines_html"
+                t-att-data-line_id="a['id']"
+                t-att-data-model_id="a['model_id']"
+                t-att-data-model_name="a['model']"
+                t-att-data-level="a.get('level', -29) + 30">
+                <t t-set="span_color" t-valuef="color: {{ '#a94442' if a['usage'] == 'out' else '#3c763d' if a['usage'] == 'in' else '#666666' }};"/>
+                <t t-set="tdclass" t-value="'o_stock_reports_unfoldable' if a.get('unfoldable') else None"/>
+                <t t-set="spanclass" t-value="None if a.get('unfoldable') else 'o_stock_reports_nofoldable'"/>
                 <t t-foreach="a['columns']" t-as="c">
-                    <t t-set="column" t-value="column + 1" />
-                      <td t-att-data-id="a.get('id')" t-att-data-model="a['model']" t-att-data-model_id="a['model_id']" t-att-class="tdclass" t-att-data-level="a['level']">
-                        <t t-if="column == 1">
-                            <t t-if="a.get('unfoldable') and not a.get('is_used')">
-                                <span t-att-data-id="a['id']" class="o_stock_reports_unfoldable o_stock_reports_caret_icon"><i class="fa fa-fw fa-caret-right" role="img" aria-label="Unfold" title="Unfold"></i></span>
+                      <td t-att-class="tdclass">
+                        <t t-if="c_first">
+                            <span t-attf-style="margin-left: {{a.get('level', 0)}}px;"/>
+                            <t t-if="a.get('unfoldable')">
+                                <span type="toggle" class="o_stock_reports_caret_icon"><i class="fa fa-fw fa-caret-right" role="img" aria-label="Unfold" title="Unfold"></i></span>
                             </t>
                             <t t-if="a.get('is_used')">
-                                <span role="img" class="o_stock_reports_stream" title="Traceability Report" aria-label="Traceability Report"><i class="fa fa-fw fa-level-up fa-rotate-270"></i></span>
+                                <a type="action" class="o_stock_reports_stream" title="Traceability Report" aria-label="Traceability Report"
+                                   data-views='[[false, "qweb"]]'
+                                   t-att-data-context="json.dumps({
+                                       'active_id': a['model_id'],
+                                       'model': a['model'],
+                                       'lot_name': a['lot_name'],
+                                   })"
+                                ><i class="fa fa-fw fa-level-up fa-rotate-270"/></a>
                             </t>
                         </t>
                         <t t-if="a['reference'] == c">
                             <span t-if="c" t-att-class="spanclass">
-                                <a t-att-data-active-id="a['res_id']" t-att-data-res-model="a['res_model']" class="o_stock_reports_web_action" href="#"><t t-raw="c" /></a>
+                                <a tabindex="-1" type="action"
+                                   t-att-data-model="a['res_model']"
+                                   t-att-data-res-id="a['res_id']">
+                                    <t t-esc="c"/>
+                                </a>
                             </span>
                         </t>
-                        <t t-elif="a['lot_name'] == c">
-                            <span>
-                                <a class="o_stock_report_lot_action" href="#"><t t-raw="c"/></a>
-                            </span>
-                        </t>
+                        <span t-elif="a['lot_name'] == c">
+                            <a tabindex="-1" type="action"
+                               t-att-data-domain="json.dumps([('id', '=', a['lot_id'])])"
+                               data-views='[[false, "qweb"]]'
+                               t-att-data-context="json.dumps({
+                                    'active_id': a['lot_id'],
+                                    'model': 'stock.production.lot',
+                               })">
+                                <t t-esc="c"/>
+                            </a>
+                        </span>
                         <t t-else="">
                             <span t-att-style="span_color">
-                                <t t-raw="c"/>
+                                <t t-esc="c"/>
                             </span>
                         </t>
                     </td>
@@ -51,10 +63,13 @@
         </t>
     </template>
 
-    <template id="report_stock_inventory">
+    <record model="ir.ui.view" id="report_stock_inventory">
+        <field name="name">Traceability Report Teplate</field>
+        <field name="model">stock.traceability.report</field>
+        <field name="type">qweb</field>
+        <field name="arch" type="xml">
         <div class="container o_stock_reports_page o_stock_reports_no_print">
             <span t-if="lines" class="o_report_heading text-left"><h1>Traceability Report</h1></span>
-            <span><t t-esc="context"/></span>
             <div class="o_stock_reports_table table-responsive">
                 <t t-if="not lines">
                     <span class="text-center"><h1>No operation made on this lot.</h1></span>
@@ -79,7 +94,8 @@
                 </t>
             </div>
         </div>
-    </template>
+        </field>
+    </record>
 
     <template id="assets_stock_print_report" inherit_id="web.assets_common" active="True">
         <xpath expr="." position="inside">
