[ADD] stock: sort-of implement the routes map thing using a qweb view
* implemented as a view on rules directly, didn't bridge to products (yet)
* much like previous conversions, no print support or search/control
  panel customisations
* didn't really style-match to the original, though the links should
  work
* relies on the report object for various helpers & overrides
* extracted overridden bits of the view (arrow drawing & legend) so
  the overrides don't have to be duplicated

--- a/addons/stock/report/report_stock_rule.xml
+++ b/addons/stock/report/report_stock_rule.xml
@@ -56,34 +56,7 @@
                                                         <td t-att-colspan="acc" class="o_report_stock_rule_rule_cell">
                                                             <t t-set="padding" t-value="50.0/acc"/>
                                                             <div class="o_report_stock_rule_rule_main" t-att-res-id="rule[0].id" t-att-res-model="rule[0]._name" view-type="form" t-att-title="rule[0].route_id.display_name">
-                                                                <div class="o_report_stock_rule_rule"  t-attf-style="padding-left: #{padding}%; padding-right: #{padding}%;">
-                                                                    <t t-if="rule[1] == 'destination'">
-                                                                        <t t-if="rule[0].procure_method == 'make_to_order'">
-                                                                            <t t-call="stock.report_stock_rule_suspension_points"/>
-                                                                        </t>
-                                                                        <t t-if="rule[0].action in ('push', 'pull_push')">
-                                                                            <t t-call="stock.report_stock_rule_right_arrow"/>
-                                                                        </t>
-                                                                    </t>
-                                                                    <t t-if="rule[1] == 'origin' and rule[0].action in ('pull', 'pull_push')">
-                                                                        <t t-call="stock.report_stock_rule_left_arrow"/>
-                                                                    </t>
-                                                                    <t t-call="stock.report_stock_rule_line"/>
-                                                                    <t t-if="rule[1] == 'destination' and rule[0].action in ('pull', 'pull_push')">
-                                                                        <t t-call="stock.report_stock_rule_right_arrow"/>
-                                                                    </t>
-                                                                    <t t-if="rule[1] == 'origin'">
-                                                                        <t t-if="rule[0].action in ('push', 'pull_push')">
-                                                                            <t t-call="stock.report_stock_rule_left_arrow"/>
-                                                                        </t>
-                                                                        <t t-if="rule[0].procure_method == 'make_to_order'">
-                                                                            <t t-call="stock.report_stock_rule_suspension_points"/>
-                                                                        </t>
-                                                                    </t>
-                                                                </div>
-                                                                <div class="o_report_stock_rule_rule_name">
-                                                                    <span t-attf-style="color: #{color};"><t t-esc="rule[0].picking_type_id.name"/></span>
-                                                                </div>
+                                                                <t t-call="stock.report_stock_rule_arrow"/>
                                                             </div>
                                                         </td>
                                                         <t t-set="acc" t-value="0"/>
@@ -107,35 +80,68 @@
                                 </t>
                             </tbody>
                         </table>
-                        <h3>Legend</h3>
-                        <div class="o_report_stock_rule_legend">
-                            <t t-set="color" t-value="'black'"/>
-                            <div class="o_report_stock_rule_legend_line">
-                                <div class="o_report_stock_rule_legend_label">Push Rule</div>
-                                <div class="o_report_stock_rule_rule o_report_stock_rule_legend_symbol">
-                                    <t t-call="stock.report_stock_rule_right_arrow"/>
-                                    <t t-call="stock.report_stock_rule_line"/>
-                                </div>
-                            </div>
-                            <div class="o_report_stock_rule_legend_line">
-                                <div class="o_report_stock_rule_legend_label">Pull Rule</div>
-                                <div class="o_report_stock_rule_rule o_report_stock_rule_legend_symbol">
-                                    <t t-call="stock.report_stock_rule_line"/>
-                                    <t t-call="stock.report_stock_rule_right_arrow"/>
-                                </div>
-                            </div>
-                            <div class="o_report_stock_rule_legend_line">
-                                <div class="o_report_stock_rule_legend_label">Trigger Another Rule</div>
-                                <div class="o_report_stock_rule_rule o_report_stock_rule_legend_symbol">
-                                    <t t-call="stock.report_stock_rule_suspension_points"/>
-                                    <t t-call="stock.report_stock_rule_line"/>
-                                </div>
-                            </div>
-                        </div>
+                        <t t-call="stock.report_stock_rule_legend"/>
                     </div>
                 </div>
             </t>
         </t>
+    </template>
+    <template id="report_stock_rule_arrow">
+        <div class="o_report_stock_rule_rule"  t-attf-style="padding-left: #{padding}%; padding-right: #{padding}%;">
+            <t t-if="rule[1] == 'destination'">
+                <t t-if="rule[0].procure_method == 'make_to_order'">
+                    <t t-call="stock.report_stock_rule_suspension_points"/>
+                </t>
+                <t t-if="rule[0].action in ('push', 'pull_push')">
+                    <t t-call="stock.report_stock_rule_right_arrow"/>
+                </t>
+            </t>
+            <t t-if="rule[1] == 'origin' and rule[0].action in ('pull', 'pull_push')">
+                <t t-call="stock.report_stock_rule_left_arrow"/>
+            </t>
+            <t t-call="stock.report_stock_rule_line"/>
+            <t t-if="rule[1] == 'destination' and rule[0].action in ('pull', 'pull_push')">
+                <t t-call="stock.report_stock_rule_right_arrow"/>
+            </t>
+            <t t-if="rule[1] == 'origin'">
+                <t t-if="rule[0].action in ('push', 'pull_push')">
+                    <t t-call="stock.report_stock_rule_left_arrow"/>
+                </t>
+                <t t-if="rule[0].procure_method == 'make_to_order'">
+                    <t t-call="stock.report_stock_rule_suspension_points"/>
+                </t>
+            </t>
+        </div>
+        <div class="o_report_stock_rule_rule_name">
+            <span t-attf-style="color: #{color};"><t t-esc="rule[0].picking_type_id.name"/></span>
+        </div>
+    </template>
+    <template id="report_stock_rule_legend">
+        <h3>Legend</h3>
+        <div class="o_report_stock_rule_legend">
+            <t t-set="color" t-value="'black'"/>
+            <div class="o_report_stock_rule_legend_line">
+                <div class="o_report_stock_rule_legend_label">Push Rule</div>
+                <div class="o_report_stock_rule_rule o_report_stock_rule_legend_symbol">
+                    <t t-call="stock.report_stock_rule_right_arrow"/>
+                    <t t-call="stock.report_stock_rule_line"/>
+                </div>
+            </div>
+            <div class="o_report_stock_rule_legend_line">
+                <div class="o_report_stock_rule_legend_label">Pull Rule</div>
+                <div class="o_report_stock_rule_rule o_report_stock_rule_legend_symbol">
+                    <t t-call="stock.report_stock_rule_line"/>
+                    <t t-call="stock.report_stock_rule_right_arrow"/>
+                </div>
+            </div>
+            <div class="o_report_stock_rule_legend_line">
+                <div class="o_report_stock_rule_legend_label">Trigger Another Rule</div>
+                <div class="o_report_stock_rule_rule o_report_stock_rule_legend_symbol">
+                    <t t-call="stock.report_stock_rule_suspension_points"/>
+                    <t t-call="stock.report_stock_rule_line"/>
+                </div>
+            </div>
+        </div>
     </template>
     <template id="report_stock_rule_line">
         <div class="o_report_stock_rule_line">
