--- a/addons/purchase_stock/report/report_stock_rule.xml
+++ b/addons/purchase_stock/report/report_stock_rule.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
-    <template id="purchase_report_stock_rule" inherit_id="stock.report_stock_rule">
+    <template id="purchase_report_stock_rule_arrow" inherit_id="stock.report_stock_rule_arrow">
         <xpath expr="//div[hasclass('o_report_stock_rule_rule')]/t" position="before">
             <t t-if="rule[0].action == 'buy'">
                 <t t-if="rule[1] == 'origin'">
@@ -20,6 +20,8 @@
                 <i class="fa fa-shopping-cart fa-fw" t-attf-style="color: #{color};"/>
             </t>
         </xpath>
+    </template>
+    <template id="purchase_report_stock_rule_legend" inherit_id="stock.report_stock_rule_legend">
         <xpath expr="//div[hasclass('o_report_stock_rule_legend')]" position="inside">
             <div class="o_report_stock_rule_legend_line">
                 <div class="o_report_stock_rule_legend_label">Buy</div>
