--- a/addons/web/static/src/scss/search_view.scss
+++ b/addons/web/static/src/scss/search_view.scss
@@ -38,6 +38,7 @@
             .o_facet_values {
                 direction: ltr#{"/*rtl:ignore*/"};
                 padding: 0 $o-searchview-facet-remove-width 0 5px;
+                @include o-text-overflow;
                 .o_facet_values_sep {
                     font-style: italic;
                 }
