--- a/addons/web/static/src/scss/form_view.scss
+++ b/addons/web/static/src/scss/form_view.scss
@@ -68,8 +68,13 @@
 
     // Readonly specific rules
     &.o_form_readonly {
-        .o_field_widget {
-            @include o-text-overflow(inline-block, 100%);
+        .oe_title {
+            .o_row {
+                max-width: 100%;
+            }
+            .o_field_widget {
+                @include o-text-overflow;
+            }
         }
         .oe_edit_only {
             display: none!important;
@@ -78,26 +83,6 @@
         .o_row:not(.o_row_readonly) {
             &, & > div {
                 display: inline-block;
-            }
-        }
-        .o_row {
-            .o_field_widget {
-                max-width: 995px;
-            }
-        }
-        .o_group {
-            &.o_inner_group {
-                > tbody > tr > td {
-                    .o_field_widget {
-                        width: 1px !important;
-                        min-width: 100%;
-                    }
-                }
-            }
-        }
-        .tab-content {
-            p {
-                white-space: normal;
             }
         }
     }
@@ -497,7 +482,7 @@
     .o_address_format {
         width: 100%;
         .o_address_street, .o_address_country {
-            display: flex;
+            white-space: normal;
         }
 
         .o_address_city {
