--- a/addons/web/static/src/scss/utils.scss
+++ b/addons/web/static/src/scss/utils.scss
@@ -253,6 +253,7 @@
     font-weight: 500;
     margin-bottom: 0;
     margin-top: 0;
+    @include o-text-overflow(block);
 }
 @mixin o-kanban-dropdown($padding-base: $o-kanban-inside-vgutter) {
     margin: -1px -1px auto auto; // compensate border
